// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemConfig should initialize contract correctly 1`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000",
  "executionGasUsed": 2418n,
  "gas": 16774797n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 2`] = `
{
  "createdAddresses":   Set {},
  "data": 0n,
  "executionGasUsed": 2351n,
  "gas": 16774864n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 3`] = `
{
  "createdAddresses":   Set {},
  "data": "1.12.0",
  "executionGasUsed": 604n,
  "gas": 16776611n,
  "logs": [],
  "rawData": "0x00000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000006312e31322e300000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 4`] = `
{
  "createdAddresses":   Set {},
  "data": 0n,
  "executionGasUsed": 2330n,
  "gas": 16774885n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 5`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000",
  "executionGasUsed": 2471n,
  "gas": 16774744n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 6`] = `
{
  "createdAddresses":   Set {},
  "data": 0n,
  "executionGasUsed": 2521n,
  "gas": 16774694n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 7`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000",
  "executionGasUsed": 2472n,
  "gas": 16774743n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 8`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000",
  "executionGasUsed": 2448n,
  "gas": 16774767n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 9`] = `
{
  "createdAddresses":   Set {},
  "data": 0n,
  "executionGasUsed": 2429n,
  "gas": 16774786n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 10`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "executionGasUsed": 2373n,
  "gas": 16774842n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;

exports[`SystemConfig should initialize contract correctly 11`] = `
{
  "createdAddresses":   Set {},
  "data": "0x0000000000000000000000000000000000000000",
  "executionGasUsed": 2494n,
  "gas": 16774721n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct":   Set {},
}
`;
